# MyTeacher

./: README.md
frontend/: package-lock.json  package.json
frontend/pages/: _app.tsx  index.tsx
frontend/src/@types/: professor.ts
frontend/src/components/Cabecalho/: Cabecalho.style.tsx  Cabecalho.tsx
frontend/src/components/Lista/: Lista.style.tsx  Lista.tsx
frontend/src/hooks/pages/: useIndex.ts
frontend/src/services/: FormatadorService.ts  apiServices.ts
frontend/src/themes/: themes.ts
server/: db.sqlite3  manage.py  pyproject.toml
server/my_teacher/: asgi.py  settings.py  urls.py  wsgi.py
server/teacher/: models.py  serializers.py  urls.py  views.py
server/teacher/migrations/: 0001_initial.py  0002_aula.py
