[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["FelipeHardmann <fashardmann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
djangorestframework = "^3.14.0"
ipython = "^8.14.0"
django-cors-headers = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
